examples/test/testpolicy18015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18015
  namespace: namespace368
spec:
  podSelector:
    matchLabels:
      key48: value34
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value2
          key41: value4
          key22: value14
      podSelector:
        matchLabels:
          key25: value7
